Refactore primary key